# kl

./: .gitignore  CMakeLists.txt  README.md
include/kl/: except.hpp  inttypes.hpp  kl.hpp  klargparser.hpp  klbase.hpp  klds.hpp  klexcept.hpp  kltext.hpp  kltimecounter.hpp  memory.hpp  text.hpp  textscanner.hpp
include/kl/ds/: array.hpp  cursor.hpp  dict.hpp  list.hpp  pair.hpp  tags.hpp
include/kl/memory/: deleters.hpp  pointer.hpp  ref_counted_pointer.hpp  unique_pointers.hpp
old/: klargparser.cpp  klargparser.hpp  klds.hpp  klnet.cpp
old/ds/: array.hpp  set.hpp
old/test/: kldate-tests.cpp  klfs-tests.cpp  kltext-tests.cpp
src/: except.cpp  klargparser.cpp  klexcept.cpp  klio.cpp  klnet.cpp  kltext.cpp  kltime.cpp  text.cpp
test/: CMakeLists.txt  klarray.cpp  klbasictext.cpp  klmemory.cpp
test/kl/: CMakeLists.txt  klbasictext.cpp  klmemory.cpp  kltextchain-tests.cpp  kltextview-tests.cpp  klvalue-tests.cpp
tools/: run-coverage.sh  setup.sh
